@@ -1,25 +1,25 @@
 
 /**
  * libemulation
- * Audio sample converter
+ * ADC/DAC
  * (C) 2010 by Marc S. Ressl (mressl@umich.edu)
  * Released under the GPL
  *
- * Controls an audio sample converter (8 and 16 bit)
+ * Controls an audio ADC/DAC (8 and 16 bit)
  */
 
 #include <math.h>
 
-#include "AudioSampleConverter.h"
+#include "ADCDAC.h"
 #include "AudioInterface.h"
 
-AudioSampleConverter::AudioSampleConverter()
+ADCDAC::ADCDAC()
 {
 	audio = NULL;
 	controlBus = NULL;
 }
 
-bool AudioSampleConverter::setRef(string name, OEComponent *ref)
+bool ADCDAC::setRef(string name, OEComponent *ref)
 {
 	if (name == "audio")
 	{
@@ -37,25 +37,25 @@ bool AudioSampleConverter::setRef(string name, OEComponent *ref)
 	return true;
 }
 
-void AudioSampleConverter::notify(OEComponent *sender, int notification, void *data)
+void ADCDAC::notify(OEComponent *sender, int notification, void *data)
 {
 	// To-Do: Implement simulation
 }
 
-OEUInt8 AudioSampleConverter::read(OEAddress address)
+OEUInt8 ADCDAC::read(OEAddress address)
 {
 	return 0;
 }
 
-void AudioSampleConverter::write(OEAddress address, OEUInt8 value)
+void ADCDAC::write(OEAddress address, OEUInt8 value)
 {
 }
 
-OEUInt16 AudioSampleConverter::read16(OEAddress address)
+OEUInt16 ADCDAC::read16(OEAddress address)
 {
 	return 0;
 }
 
-void AudioSampleConverter::write16(OEAddress address, OEUInt16 value)
+void ADCDAC::write16(OEAddress address, OEUInt16 value)
 {
 }
