@@ -1,19 +1,19 @@
 
 /**
  * libemulation
- * Audio sample converter
+ * ADC/DAC
  * (C) 2010 by Marc S. Ressl (mressl@umich.edu)
  * Released under the GPL
  *
- * Controls an audio sample converter (8 and 16 bit)
+ * Controls an audio ADC/DAC (8 and 16 bit)
  */
 
 #include "OEComponent.h"
 
-class AudioSampleConverter : public OEComponent
+class ADCDAC : public OEComponent
 {
 public:
-	AudioSampleConverter();
+	ADCDAC();
 	
 	bool setRef(string name, OEComponent *ref);
 	
